--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <nav> 
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </nav>
         <h1 contenteditable>Header</h1>
     </header>
       <div class="left-sidebar" contenteditable>Left Sidebar</div>
