--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -12,9 +12,10 @@
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
+            <a href=""></a>
         </nav>
         <h1 contenteditable>Header</h1>
-        
+
     </header>
       <div class="left-sidebar" contenteditable>Left Sidebar</div>
       <main contenteditable></main>
