--- a/index.html
+++ b/index.html
@@ -7,31 +7,48 @@
     <meta name="author" content="">
     <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
 </head>
-<body>
+<body></body>
     <header>
-        <h1></h1>
-        <nav>
-            <a href="https://byui.instructure.com/">I-Learn</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
-            <a href="#">LinkedIn </a>
-            <a href="#">Final Project</a>
-        </nav>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</h1>
     </header>
+    <nav>
+        <a href="#">LinkedIn</a>
+        <a href="#">I-Learn</a>
+        <a href="#">Scripture</a>
+        <a href="#">Final Project</a>
+    </nav>
     <main>
-        <section class="card">
-            <h1></h1>
-            <img src="" alt="">
-        </section>
-        <section class="card">
-            im
-        </section>
+        <div id="content">
+            <div class="section">
+                <h2>About Me</h2>
+                <img src="https://via.placeholder.com/150" alt="Rubia M. Francesco" style="float: right; margin-left: 1em;">
+                <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am currently working as administrative legal assistant at a law firm. My children are my world and I love spending time with them. I love to travel and I love to learn new things.</p>
+            </div>
+            <div class="section">
+                <h3>Toloria, Madagascar</h3>
+                <img src="https://via.placeholder.com/300x200" alt="Flag of Madagascar" style="float: left; margin-right: 1em;">
+                <p>Madagascar is the 4th largest island in the world and is located in the Indian Ocean. It is home to 5% of the world's plant and animal species, of which more than 80% are endemic to Madagascar. The island is best known for its lemurs, baobab trees, and vanilla.</p>
+            </div>
+        </div>
+        <aside id="web-dev-resources">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="#">Dev.to Community</a></li>
+                <li><a href="#">Smashing Magazine</a></li>
+                <li><a href="#">CSS Tricks</a></li>
+                <li><a href="#">W3 Schools</a></li>
+                <li><a href="#">Udemy</a></li>
+                <li><a href="#">Lorem Picsum Image Placeholder</a></li>
+            </ul>
+        </aside>
     </main>
     <footer>
-        <p <span id="currentyear"></span>
-            &copy;2024 Nyasha Ushewokunze Zimbabwe 
-        </p>
-
-        <p id="lastModified"></p>
+        <p>&copy;2024 Rubia Magdelena Francesco - Madagascar</p>
+        <p>Last Modification: <span id="last-modified"></span></p>
     </footer>
+    <script>
+        document.getElementById('last-modified').textContent = new Date().toLocaleString();
+    </script>
 </body>
+</html>
 </html>
