--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Nyasha Ushewokunze "Keyword summary of page content" ">
     <meta name="author" content="">
+    <link rel="stylesheet" href="styles/base.css">
     <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
+
 </head>
-<body></body>
+<body>
     <header>
         <h1>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</h1>
     </header>
@@ -50,5 +52,4 @@
         document.getElementById('last-modified').textContent = new Date().toLocaleString();
     </script>
 </body>
-</html>
 </html>
