--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
     </nav>
     <main>
         <div id="content">
-            <div class="section">
+            <section class="card">
                 <h2>About Me</h2>
-                <img src="https://via.placeholder.com/150" alt="Rubia M. Francesco" style="float: right; margin-left: 1em;">
-                <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am currently working as administrative legal assistant at a law firm. My children are my world and I love spending time with them. I love to travel and I love to learn new things.</p>
-            </div>
-            <div class="section">
-                <h3>Toloria, Madagascar</h3>
+                <img src="images/Myself.jpg" alt="Nyasha Ushewokunze">
+                <p>My name is Nyasha. I was born in and raised in Zimbabwe.</p>
+            </section>
+
+            <section class="card">
+                <h3>Toloria, Madagascar</h3
                 <img src="https://via.placeholder.com/300x200" alt="Flag of Madagascar" style="float: left; margin-right: 1em;">
                 <p>Madagascar is the 4th largest island in the world and is located in the Indian Ocean. It is home to 5% of the world's plant and animal species, of which more than 80% are endemic to Madagascar. The island is best known for its lemurs, baobab trees, and vanilla.</p>
-            </div>
+            </section>
         </div>
         <aside id="web-dev-resources">
             <h2>Web Dev Resources</h2>
@@ -40,7 +41,6 @@
                 <li><a href="#">CSS Tricks</a></li>
                 <li><a href="#">W3 Schools</a></li>
                 <li><a href="#">Udemy</a></li>
-                <li><a href="#">Lorem Picsum Image Placeholder</a></li>
             </ul>
         </aside>
     </main>
