--- a/index.html
+++ b/index.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
-<html lang="en-Us">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Nyasha Ushewokunze "Keyword summary of page content" ">
-    <meta name="author" content="">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Your Full Name">
+    <meta name="author" content="Your Full Name">
+    <title>WDD 131 - Dynamic Web Fundamentals - Your Name</title>
     <link rel="stylesheet" href="styles/base.css">
-    <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
-
+    <script src="scripts/getdates.js" defer></script>
+</head>
 </head>
 <body>
     <header>
-        <h1>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</h1>
+        <h1>WDD 131: Dynamic Web Fundamentals - Rubia M. Francesco</h1>
     </header>
     <nav>
         <a href="#">LinkedIn</a>
-        <a href="#">I-Learn</a>
+        <a href="https://byui.instructure.com/">I-Learn</a>
         <a href="#">Scripture</a>
         <a href="#">Final Project</a>
     </nav>
     <main>
-        <div id="content">
-            <section class="card">
-                <h2>About Me</h2>
-                <img src="images/Myself.jpg" alt="Nyasha Ushewokunze">
-                <p>My name is Nyasha. I was born in and raised in Zimbabwe.</p>
-            </section>
-
-            <section class="card">
-                <h3>Toloria, Madagascar</h3
-                <img src="https://via.placeholder.com/300x200" alt="Flag of Madagascar" style="float: left; margin-right: 1em;">
-                <p>Madagascar is the 4th largest island in the world and is located in the Indian Ocean. It is home to 5% of the world's plant and animal species, of which more than 80% are endemic to Madagascar. The island is best known for its lemurs, baobab trees, and vanilla.</p>
-            </section>
-        </div>
-        <aside id="web-dev-resources">
+        <section id="about-me" class="card">
+            <div>
+            <h2>About Me</h2>
+            <img src="images/Myself.jpg" alt="Rubia M. Francesco" class="portrait">
+            <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am
+                currently working as administrative legal assistant at a law firm. My children are my world and I love
+                spending time with them. I love to travel and I love to learn new things.</p>
+            </div>
+            <div>
+            <h3>Toloria, Madagascar</h3>
+            <img src="images/zim-flag.jpeg" alt="Flag Zimbabwe" class="flag">
+            <p>The Zimbabwe flag features seven horizontal stripes of green, gold, red, and black, symbolizing the nation's natural
+            resources, wealth, the blood shed during the struggle for independence, and the African heritage. On the left is a white
+            triangle with a red star and a Zimbabwe Bird, representing peace and the country's rich history. Adopted in 1980, it
+            reflects Zimbabwe's pride and resilience.</p>
+            <p><em>Official Flag of Zimbabwe</em></p>
+            </div>
+        </section>
+        <aside id="resources" class="card">
             <h2>Web Dev Resources</h2>
             <ul>
                 <li><a href="#">Dev.to Community</a></li>
-                <li><a href="#">Smashing Magazine</a></li>
                 <li><a href="#">CSS Tricks</a></li>
                 <li><a href="#">W3 Schools</a></li>
                 <li><a href="#">Udemy</a></li>
+                
             </ul>
         </aside>
     </main>
     <footer>
-        <p>&copy;2024 Rubia Magdelena Francesco - Madagascar</p>
-        <p>Last Modification: <span id="last-modified"></span></p>
+        <p>&copy;<span id="currentyear"></span> 🌺 Nyasha Ushewokunze 🌺 Zimbabwe</p>
+        <p id="lastModified"></p>
     </footer>
-    <script>
-        document.getElementById('last-modified').textContent = new Date().toLocaleString();
-    </script>
 </body>
 </html>
