--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Your Full Name">
-    <meta name="author" content="Your Full Name">
-    <title>WDD 131 - Dynamic Web Fundamentals - Your Name</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals -  Nyasha Ushewokunze">
+    <meta name="author" content=" Nyasha Ushewokunze">
+    <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
 </head>
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - Rubia M. Francesco</h1>
+        <h1>WDD 131: Dynamic Web Fundamentals - Nyasha Ushewokunze</h1>
     </header>
     <nav>
         <a href="#">LinkedIn</a>
@@ -24,35 +24,37 @@
     <main>
         <section id="about-me" class="card">
             <div>
-            <h2>About Me</h2>
-            <img src="images/Myself.jpg" alt="Rubia M. Francesco" class="portrait">
-            <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am
-                currently working as administrative legal assistant at a law firm. My children are my world and I love
-                spending time with them. I love to travel and I love to learn new things.</p>
+                <h2>About Me</h2>
+                <img src="images/Myself.jpg" alt="Nyasha Ushewokunze" class="portrait">
+                <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am
+                    currently working as administrative legal assistant at a law firm. My children are my world and I love
+                    spending time with them. I love to travel and I love to learn new things.</p>
             </div>
+
             <div>
-            <h3>Toloria, Madagascar</h3>
-            <img src="images/zim-flag.jpeg" alt="Flag Zimbabwe" class="flag">
-            <p>The Zimbabwe flag features seven horizontal stripes of green, gold, red, and black, symbolizing the nation's natural
-            resources, wealth, the blood shed during the struggle for independence, and the African heritage. On the left is a white
-            triangle with a red star and a Zimbabwe Bird, representing peace and the country's rich history. Adopted in 1980, it
-            reflects Zimbabwe's pride and resilience.</p>
-            <p><em>Official Flag of Zimbabwe</em></p>
+                <h3>Zimbabwe</h3>
+                <img src="images/zim-flag.jpeg" alt="Flag Zimbabwe" class="flag">
+                <p>The Zimbabwe flag features seven horizontal stripes of green, gold, red, and black, symbolizing the nation's natural
+                    resources, wealth, the blood shed during the struggle for independence, and the African heritage. On the left is a
+                    whitetriangle with a red star and a Zimbabwe Bird, representing peace and the country's rich history. Adopted in 1980, it
+                    reflects Zimbabwe's pride and resilience.</p>
+                <p><em>Official Flag of Zimbabwe</em></p>
+            
             </div>
         </section>
-        <aside id="resources" class="card">
+
+        <section id="resources" class="card">
             <h2>Web Dev Resources</h2>
             <ul>
                 <li><a href="#">Dev.to Community</a></li>
                 <li><a href="#">CSS Tricks</a></li>
                 <li><a href="#">W3 Schools</a></li>
                 <li><a href="#">Udemy</a></li>
-                
             </ul>
-        </aside>
+        </section>
     </main>
     <footer>
-        <p>&copy;<span id="currentyear"></span> 🌺 Nyasha Ushewokunze 🌺 Zimbabwe</p>
+        <p>&copy;<span id="currentyear"></span>  Nyasha Ushewokunze  Zimbabwe</p>
         <p id="lastModified"></p>
     </footer>
 </body>
