--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about-me" class="card">
             <div>
                 <h2>About Me</h2>
-                <img src="images/Myself.jpg" alt="Nyasha Ushewokunze" class="portrait">
+                <img src="images/myself.jpg" alt="Nyasha Ushewokunze" class="portrait">
                 <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am
                     currently working as administrative legal assistant at a law firm. My children are my world and I love
                     spending time with them. I love to travel and I love to learn new things.</p>
