--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
             <div>
                 <h2>About Me</h2>
                 <img src="images/myself.jpg" alt="Nyasha Ushewokunze" class="portrait">
-                <p>My name is Rubia and I go by Ruby. I was born in South Africa and live with my family in Madagascar. I am
-                    currently working as administrative legal assistant at a law firm. My children are my world and I love
-                    spending time with them. I love to travel and I love to learn new things.</p>
+                <p>I'm Nyasha Ushewokunze, a technology entrepreneur passionate about solving business problems through innovative
+                solutions. I'm currently pursuing a degree in software development and am especially interested in leveraging Python and
+                Django to create impactful applications. As a co-founder of SocialHub, I'm involved in building platforms that integrate
+                social media, websites, and customer relationship management.
+                
+                I'm also diving into agriculture and renewable energy. I'm starting a renewable energy company that will provide solar
+                solutions and borehole services in Zimbabwe. One of my exciting projects is 'Quicker', a web app designed to make
+                self-service processes smoother in supermarkets, banks, and government entities.
+                
+                In addition to my tech ventures, I'm a pianist and have served as a missionary in Ghana and Kenya. My faith plays a
+                significant role in my life; I currently serve as a Stake Clerk. My ultimate goals include owning a software company,
+                running an agribusiness, and earning degrees in both technology and agriculture.</p>
             </div>
 
             <div>
