--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about-me" class="card">
             <div>
                 <h2>About Me</h2>
-                <img src="images/myself.jpg" alt="Nyasha Ushewokunze" class="portrait">
+                <img src="images/myself.jpeg" alt="Nyasha Ushewokunze" class="portrait">
                 <p>I'm Nyasha Ushewokunze, a technology entrepreneur passionate about solving business problems through innovative
                 solutions. I'm currently pursuing a degree in software development and am especially interested in leveraging Python and
                 Django to create impactful applications. As a co-founder of SocialHub, I'm involved in building platforms that integrate
