--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <h1>WDD 131: Dynamic Web Fundamentals - Nyasha Ushewokunze</h1>
     </header>
-    <nav>
+    <nav class="nav-list">
         <a href="#">LinkedIn</a>
         <a href="https://byui.instructure.com/">I-Learn</a>
-        <a href="#">Scripture</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
         <a href="#">Final Project</a>
     </nav>
     <main>
