--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals -  Nyasha Ushewokunze">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Course Homepage  -  Nyasha Ushewokunze">
     <meta name="author" content=" Nyasha Ushewokunze">
     <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
     <link rel="stylesheet" href="styles/base.css">
