--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content=" Nyasha Ushewokunze">
     <title>WDD 131 - Dynamic Web Fundamentals - Nyasha Ushewokunze</title>
     <link rel="stylesheet" href="styles/base.css">
-    <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/getdates.js" ></script>
 </head>
 </head>
 <body>
