--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -15,11 +15,11 @@
     </head>
 </head>
 <body>
-<header class="had">
-    <h1>Media Query Example</h1>
-</header>
-<main class="man">
-    <section class="sect">
+    <header>
+        <h1>Media Query Example</h1>
+    </header>
+<main>
+    <section >
         <h2>2 Nephi 32:9</h2>
         <p>But behold, I say unto you that ye must pray always, and not faint; that ye must not perform any thing unto
             the Lord save in the first place ye shall pray unto the Father in the name of Christ, that he will
@@ -31,6 +31,7 @@
             might be restored unto grace for grace, according to their works.</p>
     </section>
 </main>
+
 <footer>
    <p>Nyasha Ushewokunze</p>
 </footer>
