--- a/temples.html
+++ b/temples.html
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentYear"></span> | Nyasha Ushewokunze  |</span></p>
+        <p>&copy; <span id="currentYear"></span> | Nyasha Ushewokunze |</p>
         <p>Last Updated: <span id="lastModified"></span></p>
     </footer>
 </body>
