--- a/temples.html
+++ b/temples.html
@@ -36,35 +36,35 @@
                 <figcaption>San Diego California Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 2">
+                <img src="" alt="Temple 2">
                 <figcaption>Salt Lake Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 3">
+                <img src="" alt="Temple 3">
                 <figcaption>Provo Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 4">
+                <img src="" alt="Temple 4">
                 <figcaption>Nauvoo Illinois Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 5">
+                <img src="" alt="Temple 5">
                 <figcaption>Rome Italy Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 6">
+                <img src="" alt="Temple 6">
                 <figcaption>Kyiv Ukraine Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 7">
+                <img src="" alt="Temple 7">
                 <figcaption>Manila Philippines Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 8">
+                <img src="" alt="Temple 8">
                 <figcaption>Paris France Temple</figcaption>
             </figure>
             <figure>
-                <img src="/api/placeholder/400/300" alt="Temple 9">
+                <img src="" alt="Temple 9">
                 <figcaption>Tokyo Japan Temple</figcaption>
             </figure>
         </div>
