--- a/temples.html
+++ b/temples.html
@@ -32,7 +32,7 @@
         <h2 id="current-section">Home</h2>
         <div class="temple-grid">
             <figure>
-                <img src="images/zim-fla.jpeg" alt="Temple 1">
+                <img src="images/zim-flag.jpeg" alt="Temple 1">
                 <figcaption>San Diego California Temple</figcaption>
             </figure>
             <figure>
