--- a/temples.html
+++ b/temples.html
@@ -31,39 +31,39 @@
         <h2 id="current-section">Home</h2>
         <div class="temple-grid">
             <figure>
-                <img src="images/zim-flag.jpeg" alt="Temple 1">
-                <figcaption>San Diego California Temple</figcaption>
+                <img src="images/asunción-paraguay-temple.jpeg" alt="Paraguay Temple">
+                <figcaption>Paraguay Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 2">
-                <figcaption>Salt Lake Temple</figcaption>
+                <img src="images/aba-nigeria-temple.jpeg" alt="Aba Nigeria Temple">
+                <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 3">
-                <figcaption>Provo Temple</figcaption>
+                <img src="images/adelaide-australia.jpeg" alt="Adelaide Australia Temple">
+                <figcaption>Adelaide Australia Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 4">
-                <figcaption>Nauvoo Illinois Temple</figcaption>
+                <img src="images/argentina.jpeg" alt="Argentina Temple">
+                <figcaption>Argentina Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 5">
-                <figcaption>Rome Italy Temple</figcaption>
+                <img src="images/cedar-city.jpeg" alt="Cedar City Temple">
+                <figcaption>Cedar City Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 6">
-                <figcaption>Kyiv Ukraine Temple</figcaption>
+                <img src="images/cardston-alberta.jpeg" alt="Cardston Alberta Temple">
+                <figcaption>Cardston Alberta Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 7">
-                <figcaption>Manila Philippines Temple</figcaption>
+                <img src="images/albuquerque-temple.jpeg" alt="Albuquerque Temple">
+                <figcaption>Albuquerque Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 8">
+                <img src="images/draper-utah-lds-temple.jpEg" alt="Draper Utah Temple">
                 <figcaption>Paris France Temple</figcaption>
             </figure>
             <figure>
-                <img src="" alt="Temple 9">
+                <img src="images/fresno-temple.jpeg" alt="Fresno California ">
                 <figcaption>Tokyo Japan Temple</figcaption>
             </figure>
         </div>
