--- a/temples.html
+++ b/temples.html
@@ -60,11 +60,11 @@
             </figure>
             <figure>
                 <img src="images/draper-utah-lds-temple.jpEg" alt="Draper Utah Temple">
-                <figcaption>Paris France Temple</figcaption>
+                <figcaption>Draper Utah Temple</figcaption>
             </figure>
             <figure>
                 <img src="images/fresno-temple.jpeg" alt="Fresno California ">
-                <figcaption>Tokyo Japan Temple</figcaption>
+                <figcaption>Fresno California</figcaption>
             </figure>
         </div>
     </main>
