--- a/temples.html
+++ b/temples.html
@@ -13,17 +13,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Temple Album</h1>
-        <nav>
-            <button id="hamburger">&#9776;</button>
-            <ul id="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#old">Old</a></li>
-                <li><a href="#new">New</a></li>
-                <li><a href="#large">Large</a></li>
-                <li><a href="#small">Small</a></li>
-            </ul>
+        <nav class="nav">
+                <a href="#home">Home</a>
+                <a href="#old">Old</a>
+                <a href="#new">New</a>
+                <a href="#large">Large</a>
+                <a href="#small">Small</a>
         </nav>
     </header>
 
