--- a/temples.html
+++ b/temples.html
@@ -65,10 +65,9 @@
             </figure>
         </div>
     </main>
-
     <footer>
-        <p>&copy; <span id="currentYear"></span> | Nyasha Ushewokunze |</p>
-        <p>Last Updated: <span id="lastModified"></span></p>
+        <p>&copy;<span id="currentyear"></span> Nyasha Ushewokunze Zimbabwe</p>
+        <p id="lastModified"></p>
     </footer>
 </body>
 
