--- a/temples.html
+++ b/temples.html
@@ -8,7 +8,7 @@
     <meta name="description" content="My photo album">
     <meta name="author" content="Nyasha Ushewokunze ">
     <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temples-large.css" media="(min-width: 640px)">
+    <link rel="stylesheet" href="styles/temples-large.css" media="(max-width: 640px)">
     <script src="scripts/temples.js" defer></script>
 </head>
 
