--- a/temples.html
+++ b/temples.html
@@ -14,6 +14,11 @@
     <header class="header">
         <h1>Temple Album</h1>
         <nav class="nav">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <a href="#home">Home</a>
                 <a href="#old">Old</a>
                 <a href="#new">New</a>
