--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#">LinkedIn</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/11?lang=eng&id=p7#p7">Scripture</a>
+            <a href="https://jambofy.github.io/wdd131/temples.html">Photo Album</a>
             <a href="#">Final Project</a>
         </nav>
     </header>
@@ -25,7 +26,7 @@
         <section id="about-me" class="card">
             <div>
             
-                    <h2 class="heading">About Me</h2>
+                <h2 class="heading">About Me</h2>
                
                 <img src="images/myself.jpeg" alt="Nyasha Ushewokunze" class="portrait">
                 <p class="para">I'm Nyasha Ushewokunze, a technology entrepreneur passionate about solving business problems through innovative
