--- a/place.html
+++ b/place.html
@@ -15,7 +15,7 @@
     <main>
         <section class="hero">
             <picture>
-                <source media="(min-width: 768px)" srcset="images/">
+                <source media="(min-width: 768px)" srcset="images/zimbabwe.jpeg">
                 <img src="images/zimbabwe.jpeg" alt="Zimbabwe">
             </picture>
         </section>
