--- a/place.html
+++ b/place.html
@@ -18,8 +18,8 @@
         <!---->
         <section class="hero">
             <picture>
-                <source media="(min-width: 468px)" srcset="images/zimbabwe.jpeg">
-                <img src="images/zimbabwe.jpeg" alt="Zimbabwe"  width= "500" height="250">
+                <source media="(min-width: 468px)" srcset="images/zimbabwe.webp">
+                <img src="images/zimbabwe.webp" alt="Zimbabwe"  width= "500" height="250">
             </picture>
         </section>
         
