--- a/place.html
+++ b/place.html
@@ -6,6 +6,7 @@
     <title>Zimbabwe</title>
     <meta name="description" content="This is my Country Zimbabwe">
     <meta name="author" content="Nyasha Ushewokunze">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
 </head>
