--- a/place.html
+++ b/place.html
@@ -16,7 +16,6 @@
     </header>
     
     <main>
-        <!---->
         <section class="hero">
             <picture>
                 <source media="(min-width: 468px)" srcset="images/zimbabwe.webp">
@@ -37,7 +36,8 @@
         </section>
         
         <section class="weather">
-            <h2>Weather ⛅</h2>
+            <h2>Weather</h2>
+            <img src="images/forecast_sun_icon.svg" alt="weather icon">
             <p>Temperature: 31°C</p>
             <p>Conditions: Partly Cloudy</p>
             <p>Wind: 5 km/h</p>
