--- a/place.html
+++ b/place.html
@@ -6,7 +6,8 @@
     <title>Zimbabwe</title>
     <meta name="description" content="This is my Country Zimbabwe">
     <meta name="author" content="Nyasha Ushewokunze">
-    <link rel="preconnect"  href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"  href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" >
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
 </head>
