--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album</title>
-    <meta name="description" content="My Temples Photos Album">
-    <meta name="author" content="Nyasha Ushewokunze ">
+    <meta name="description" content="My Temple Photo Album sorted by size and age">
+    <meta name="author" content="Nyasha Shepard  Ushewokunze ">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <script src="scripts/filterded-temples.js" defer></script>
 </head>
