--- a/form.html
+++ b/form.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A form for submitting product reviews, allowing users to rate products and provide feedback.">
-    <meta name="author" content="Nyasha Ushewokunze">
+    <meta name="author" content="Nyasha Shepard Ushewokunze">
     <meta name="keywords" content="Product Reviews, User Feedback, Ratings, Review Form">
     <title>Product Review Form</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer ></script>  
 </head>
