--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Product Reviews, User Feedback, Ratings, Review Form">
     <title>Product Review Form</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer ></script>  
 </head>
