--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
         <label for="productName">Product Name:</label>
         <select id="productName" name="productName" required>
             <option value="" disabled selected>Select a Product ...</option>
-            <!-- Options will be populated by JavaScript -->
+           
         </select>
         
         <label>Overall Rating:</label>
@@ -38,7 +38,7 @@
 
         <label>
             Useful Features:
-            <p style="font-style: italic;">(Check all that apply)</p>
+            <p>(Check all that apply)</p>
         </label>
         <div class="features">
             <label><input type="checkbox" name="features" value="Feature1"> Durability</label>
