--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
 
         <label>
             Useful Features:
-            <p>(Check all that apply)</p>
+            (Check all that apply)
         </label>
         <div class="features">
             <label><input type="checkbox" name="features" value="Feature1"> Durability</label>
