--- a/form.html
+++ b/form.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A form for submitting product reviews, allowing users to rate products and provide feedback.">
-    <meta name="author" content="Nyasha Shepard Ushewokunze">
+    <meta name="author" content="Nyasha Ushewokunze">
     <meta name="keywords" content="Product Reviews, User Feedback, Ratings, Review Form">
     <title>Product Review Form</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer ></script>  
 </head>
@@ -22,7 +19,7 @@
         <label for="productName">Product Name:</label>
         <select id="productName" name="productName" required>
             <option value="" disabled selected>Select a Product ...</option>
-           
+            <!-- Options will be populated by JavaScript -->
         </select>
         
         <label>Overall Rating:</label>
@@ -39,7 +36,7 @@
 
         <label>
             Useful Features:
-            (Check all that apply)
+            <p style="font-style: italic;">(Check all that apply)</p>
         </label>
         <div class="features">
             <label><input type="checkbox" name="features" value="Feature1"> Durability</label>
