--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Temple Album</h1>
+        <h1>Temples Album</h1>
         <a id="menu" href="#"></a>
         <nav class="navigation">
             <ul>
