--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -65,15 +65,16 @@
                     <li>Sidebar: Client Testimonials, Recent Projects</li>
                     <li>Footer: Contact Information, Social Media Links</li>
                 </ul>
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="https://embed.figma.com/design/uJ6MfwiHp8NFMOUBWJRqd8/Untitled?node-id=0-1&embed-host=share" allowfullscreen></iframe>
-                
+                <!--<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="https://embed.figma.com/design/uJ6MfwiHp8NFMOUBWJRqd8/Untitled?node-id=0-1&embed-host=share" allowfullscreen></iframe>-->
+                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="images/desktop.PNG" allowfullscreen></iframe>
                 <p><strong>Mobile View:</strong></p>
                 <ul>
                     <li>Header: Logo</li>
                     <li>Main Section: Stacked Services Overview, Call to Action</li>
                     <li>Footer: Contact Information</li>
                 </ul>
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="https://embed.figma.com/design/LlpI5BCV9LTR7VycKRoBL2/Buildify-HomePage-Mobile?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+                <!--<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="https://embed.figma.com/design/uJ6MfwiHp8NFMOUBWJRqd8/Untitled?node-id=0-1&embed-host=share" allowfullscreen></iframe>-->
+                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="450" src="images/mobile.PNG" allowfullscreen></iframe>
             </div>
         </section>
     </main>
