--- a/project/projects.html
+++ b/project/projects.html
@@ -15,14 +15,13 @@
     <header>
         <nav>
             <div class="logo">Buildify</div>
-            <div class="menu-icon">Menu</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
             <div class="menu-icon">
-                <i data-lucide="menu"></i>
+                <i data-lucide="menu">Menu</i>
             </div>
         </nav>
     </header>
