--- a/project/buildify.html
+++ b/project/buildify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Buildify is a construction company Zimbabwe offering shop fitting and Aluminiun works, Tiling, Cupboards and Shop Shelves ">
+    <meta name="author" content="Buildify is a construction company Zimbabwe offering shop fitting and Aluminum works, Tiling, Cupboards and Shop Shelves ">
     <title>Buildify - Your Trusted Construction Partner</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/script.js" defer></script>
