--- a/project/buildify.html
+++ b/project/buildify.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="logo">Buildify</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="buildify.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
