--- a/project/services.html
+++ b/project/services.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo">Buildify</div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="buildify.html">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
