--- a/project/buildify.html
+++ b/project/buildify.html
@@ -88,7 +88,7 @@
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
             <form id="contact-form">
-                <input autocomplete="on" type="text" name="name" placeholder="Your Name" required autocomplete="given-name" >
+                <input autocomplete="on" type="text" name="name" placeholder="Your Name" required ="given-name" >
                 <input autocomplete="off" type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
